# dist_agent_lang

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FUZZING_GUIDE.md  GOOD_FIRST_ISSUES.md  HOMEBREW_NETWORK_FIX.sh  INSTALLATION.md  LICENSE  Makefile  NOTICE  QUICK_START.md  README.md  README.user.md  SECURITY.md  SECURITY_DISCLAIMER.md  agent.dal  agent.toml  agent_context.md  build.rs  chain  crates.js  dal.toml  dal_err.txt  debug-tokens.dal  debug_benchmark.rs  help.html  index.html  landing_page.html  llms.txt  log-test.dal  minimal-test.dal  package-lock.json  package.json  settings.html  src-files.js  test_contract.dal  (+1 more)
dist_agent_lang/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FUZZING_GUIDE.md  GITHUB_RELEASE.md  INSTALLATION.md  LICENSE  Makefile  PACKAGING_GUIDE.md  PARSER_USAGE_GUIDE.md  PERFORMANCE_REPORT.md  PRODUCTION_ROADMAP.md  README.md  SECURITY_DISCLAIMER.md  all.html  build.rs  constant.MAX_PARSE_SOURCE_BYTES.html  constant.MAX_PARSE_TOKEN_COUNT.html  fn.execute_dal_and_extract_handlers.html  fn.execute_dal_and_extract_handlers_with_path.html  fn.execute_dal_file.html  fn.execute_dal_with_scope.html  fn.execute_source.html  fn.parse_source.html  index.html  macro.nonreentrant.html  macro.profile.html  macro.profile_end.html  macro.profile_start.html  package.json  sidebar-items.js
dist_agent_lang/.cargo/: config.toml
dist_agent_lang/.github/: CODEQL_NOTES.md  README.md  SECURITY_SETUP.md  SETUP.md  dependabot.yml  labels.json  pull_request_template.md
dist_agent_lang/agent_context_schema/: fn.build_prompt_for_llm.html  index.html  sidebar-items.js  struct.AgentContextSchema.html  struct.AgentStateBlock.html  struct.ContextBlock.html  struct.ConversationTurn.html
dist_agent_lang/benches/: performance.rs  performance_benchmarks.rs
dist_agent_lang/cli/: enum.ChainSubcommand.html  enum.ColorChoice.html  enum.Commands.html  enum.IdeSubcommand.html  fn.chain_subcommand_to_args.html  index.html  sidebar-items.js  struct.Cli.html
dist_agent_lang/cli_design/: constant.TAGLINE.html  constant.TAGLINE_FULL.html  fn.help_content.html  fn.print_banner.html  fn.version.html  index.html  sidebar-items.js
dist_agent_lang/compile/: enum.CompileError.html  enum.TrustCompileMode.html  fn.get_backend.html  fn.run_compile.html  fn.run_compile_with_mode.html  fn.select_services_for_target.html  index.html  sidebar-items.js  struct.CompileArtifacts.html  struct.CompileOptions.html  trait.CompileBackend.html
dist_agent_lang/dal_summary/: fn.summary_from_path.html  fn.summary_from_program.html  fn.summary_from_source.html  fn.to_context_string.html  index.html  struct.DalSummary.html  struct.ServiceSummary.html
dist_agent_lang/docs/: Documentation.md  EXAMPLE_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ORACLE_DEVELOPMENT_README.md  README.md  RUNTIME_TESTING_STATUS.md  SEMANTIC_VALIDATION_ACHIEVEMENT.md  SOLIDITY_INTEGRATION_GUIDE.md  TESTING_ATTRIBUTES.md  TESTING_FRAMEWORK_PROPOSAL.md  TESTING_QUICK_REFERENCE.md  THREE_LAYER_TESTING.md  USAGE_GUIDE.md  USER_FACING_DOCS.md  WHY_RUST_UNIT_TESTS.md  attributes.md  syntax.md  tutorials.md
dist_agent_lang/examples/: agent_system_demo.dal  auto_detect_example.dal  backend_connectivity_patterns.dal  chain_selection_example.dal  cross_chain_patterns.dal  defi_nft_rwa_contract.dal  dynamic_nft_examples.dal  dynamic_rwa_examples.dal  enhanced_language_features.dal  fix_else_if.sh  frontend_todo_app.html  hello_world_demo.dal  http_vs_ffi_example.dal  keys_admin_interface.html  keys_landing_page.html  keys_user_interface.html  llm_integration_examples.dal  llm_motivations_demo.dal  multi_chain_operations.dal  oracle_development_setup.dal  phase5_desktop_examples.dal  phase6_edge_examples.dal  practical_backend_example.dal  rust_ffi_example.rs  secure_configuration_example.dal  simple_chain_examples.dal  solidity_abi_integration.dal  solidity_orchestration.dal  solidity_testing.dal  test_ai_agents.dal  test_ai_integration.dal  test_database_functions.dal  test_desktop_mobile.dal  test_phase6_iot_edge.dal  todo_backend_service.dal  token_contract.test.dal  xnft_implementation.dal
dist_agent_lang/ffi/: index.html  struct.FFIConfig.html
dist_agent_lang/fleet/: enum.ExportFormat.html  fn.add_from_mold.html  fn.add_member.html  fn.create.html  fn.create_from_mold.html  fn.delete.html  fn.deploy.html  fn.export.html  fn.health.html  fn.list.html  fn.run.html  fn.scale.html  fn.show.html  index.html  sidebar-items.js  struct.Fleet.html  struct.FleetHealth.html  struct.RunReport.html
dist_agent_lang/fuzz/: Cargo.toml
dist_agent_lang/http_server/: fn.start_http_server.html  index.html  sidebar-items.js  struct.WebRequest.html  struct.WebResponse.html  struct.WebServerState.html
dist_agent_lang/http_server_converters/: fn.axum_request_to_http_request.html  fn.error_response.html  fn.http_response_to_axum_response.html  fn.json_response.html  index.html
dist_agent_lang/http_server_handlers/: fn.get_route_handler_name.html  fn.get_route_handler_name_and_params.html  fn.handle_with_middleware.html  index.html
dist_agent_lang/http_server_integration/: fn.create_router_with_middleware.html  fn.create_router_with_options.html  fn.create_router_with_runtime_factory.html  index.html
dist_agent_lang/http_server_middleware/: enum.MiddlewareError.html  fn.execute_middleware_chain.html  fn.execute_route_handler.html  fn.value_to_http_request.html  fn.value_to_http_response.html  index.html
dist_agent_lang/http_server_security/: fn.security_headers_middleware.html  index.html  struct.AuthValidator.html  struct.Claims.html  struct.CorsConfig.html  struct.InputValidator.html  struct.JwtConfig.html  struct.RateLimiter.html  struct.RequestSizeLimiter.html  struct.SecurityLogger.html
dist_agent_lang/http_server_security_middleware/: fn.auth_middleware.html  fn.input_validation_middleware.html  index.html  (+3 more)
fuzz/: .gitignore  Cargo.toml
(+20763 files in other folders)
