[package]
name = "dist_agent_lang"
version = "1.0.5"
edition = "2021"
description = "A hybrid programming language for decentralized and centralized network integration"
authors = ["OK Jason <jason.dinh.developer@gmail.com>"]
license = "MIT"
repository = "https://github.com/dist_agent_lang/dist_agent_lang"
keywords = ["programming-language", "blockchain", "smart-contracts", "distributed-systems"]
categories = ["development-tools"]

# Single CLI binary (invoke as `dal` or `dist_agent_lang` via install name / symlink)
[[bin]]
name = "dal"
path = "src/main.rs"

[lib]
name = "dist_agent_lang"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
md5 = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
# Cryptography for production-grade signatures
ecdsa = "0.16"
k256 = "0.13"
ed25519-dalek = "2.1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
uuid = { version = "1.0", features = ["v4"] }
# HTTP client for HTTP interface
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"], optional = true }
# Python FFI bindings (optional)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
# Web3 / EVM for mold marketplace (mintMold, useMold)
ethers = { version = "2.0", features = ["rustls"], optional = true }
# SQLite for transaction storage backend (optional)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = ["http-interface"]
http-interface = ["reqwest"]
web3 = ["ethers"]
python-ffi = ["pyo3"]
c-ffi = []
sqlite-storage = ["rusqlite"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.0"
serial_test = "3.0"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

# Exclude .rs files in examples/ directory from compilation
# These are dist_agent_lang source files, not Rust code.
# (docs.rs uses nightly and may support cargo-args; stable Cargo ignores it and warns.)
# [package.metadata.docs.rs]
# cargo-args = ["-Zunstable-options", "-Zskip-rustdoc-targets=examples"]

# Note: Cargo automatically discovers example binaries in examples/ directory
# To prevent dist_agent_lang source files (.rs files with dist_agent_lang syntax)
# from being compiled as Rust examples, we use a build script or exclude them.
# The examples/ directory contains dist_agent_lang source code, not Rust code.
# These files should be run through the dist_agent_lang interpreter, not compiled as Rust.
